[package]
authors = ["jbarszczewski"]
edition = "2018"
name = "rust-tokio-tutorial"
repository = "https://github.com/jbarszczewski/rust-tokio-tutorial"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.2", features = ["full"]}
